[package]
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
categories = ["game-development"]
description = "Fire Bevy events from crossbeam channels"
edition = "2024"
keywords = ["gamedev", "bevy"]
license = "MIT OR Apache-2.0"
name = "bevy_crossbeam_event"
repository = "https://github.com/johanhelsing/bevy_crossbeam_event"
version = "0.9.0"

[dependencies]
bevy = { version = "0.17", default-features = false }
crossbeam-channel = "0.5"
